[package]
name = "sentry-tracing"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry integration for the tracing and tracing-subscriber crates.
"""
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
backtrace = ["dep:sentry-backtrace"]
logs = ["sentry-core/logs"]

[dependencies]
sentry-core = { version = "0.48.5", path = "../sentry-core", features = [
    "client",
] }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std"] }
sentry-backtrace = { workspace = true, optional = true }
bitflags = { workspace = true }

[dev-dependencies]
log = { workspace = true }
sentry = { workspace = true, features = ["test", "tracing"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "registry"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
