[package]
name = "sentry-types"
version = "0.46.0"
authors = ["Sentry <hello@sentry.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://sentry.io/welcome/"
description = """
Common reusable types for implementing the sentry.io protocol.
"""
keywords = ["sentry", "protocol"]
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["protocol"]
protocol = []

[dependencies]
debugid = { version = "0.8.0", features = ["serde"] }
hex = "0.4.3"
rand = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
thiserror = "2.0.12"
time = { version = "0.3.5", features = ["formatting", "parsing"] }
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.25.0"
