[package]
name = "sentry-types"
version = "0.46.2"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Common reusable types for implementing the sentry.io protocol.
"""
keywords = ["sentry", "protocol"]
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
default = ["protocol"]
protocol = []

[dependencies]
debugid = { version = "0.8.0", features = ["serde"] }
hex = "0.4.3"
rand = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
thiserror = "2.0.12"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.25.0"
