[package]
name = "sentry-types"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Common reusable types for implementing the sentry.io protocol.
"""
keywords = ["sentry", "protocol"]
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["protocol"]
protocol = []

[dependencies]
debugid = { workspace = true, features = ["serde"] }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
rstest = { workspace = true }
