[package]
name = "sentry"
version = "0.48.5"
authors = { workspace = true }
license = "MIT"
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
description = """
Sentry (sentry.io) client for Rust.
"""
edition = { workspace = true }
rust-version = { workspace = true }
autoexamples = true

# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
[package.metadata.docs.rs]
all-features = true
# Defines the configuration attribute `doc_cfg` in order to expose feature-gated docs.
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
default = [
    "backtrace",
    "contexts",
    "debug-images",
    "logs",
    "metrics",
    "panic",
    "transport",
    "release-health",
]

# default integrations
backtrace = ["sentry-backtrace", "sentry-tracing?/backtrace"]
contexts = ["sentry-contexts"]
panic = ["sentry-panic"]
# other integrations
anyhow = ["sentry-anyhow"]
actix = ["sentry-actix"]
debug-images = ["sentry-debug-images"]
log = ["sentry-log"]
slog = ["sentry-slog"]
tower = ["sentry-tower"]
tower-http = ["tower", "sentry-tower/http"]
tower-axum-matched-path = ["tower-http", "sentry-tower/axum-matched-path"]
tracing = ["sentry-tracing"]
opentelemetry = ["sentry-opentelemetry"]
# other features
test = ["sentry-core/test"]
release-health = ["sentry-core/release-health", "sentry-actix?/release-health"]
logs = ["sentry-core/logs", "sentry-tracing?/logs", "sentry-log?/logs"]
metrics = ["sentry-core/metrics"]
# transports
transport = ["reqwest", "native-tls"]
reqwest = ["dep:reqwest", "httpdate", "tokio"]
curl = ["dep:curl", "httpdate"]
ureq = ["dep:ureq", "httpdate"]
# transport settings
native-tls = [
    "dep:native-tls",
    "reqwest?/native-tls-no-alpn",
    "ureq?/native-tls",
]
rustls = ["dep:rustls", "reqwest?/rustls", "ureq?/rustls"]
rustls-no-provider = ["dep:rustls", "reqwest?/rustls-no-provider", "ureq?/rustls"]
embedded-svc-http = ["dep:embedded-svc", "dep:esp-idf-svc"]

[dependencies]
sentry-core = { workspace = true, features = ["client"] }
sentry-anyhow = { workspace = true, optional = true }
sentry-actix = { workspace = true, optional = true }
sentry-backtrace = { workspace = true, optional = true }
sentry-contexts = { workspace = true, optional = true }
sentry-debug-images = { workspace = true, optional = true }
sentry-log = { workspace = true, optional = true }
sentry-panic = { workspace = true, optional = true }
sentry-slog = { workspace = true, optional = true }
sentry-tower = { workspace = true, optional = true }
sentry-tracing = { workspace = true, optional = true }
sentry-opentelemetry = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["blocking", "json"], optional = true }
curl = { workspace = true, optional = true }
httpdate = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt"], optional = true }
ureq = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
embedded-svc = { workspace = true, optional = true }
[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { workspace = true, optional = true }

[dev-dependencies]
sentry-anyhow = { workspace = true }
sentry-log = { workspace = true }
sentry-slog = { workspace = true }
sentry-tower = { workspace = true }
sentry-tracing = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true, features = ["std"] }
pretty_env_logger = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "tracing-log"] }

[lints]
workspace = true

[build-dependencies]
cfg_aliases = { workspace = true }
