[package]
name = "sentry-actix"
version = "0.12.1"
authors = ["Sentry <hello@sentry.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/getsentry/sentry-rust"
homepage = "https://github.com/getsentry/sentry-rust"
documentation = "https://docs.rs/sentry-actix"
description = """
Sentry client extension for actix-web
"""

[dependencies]
actix-web = { version = "0.7", default-features = false }
sentry = { version = "0.12.1", path = "../../" }
failure = "0.1.3"
fragile = "0.3.0"
